# xrootd

./: xrootd.spec
.github/workflows/: CI.yml
RPMS/el8/RPMS/noarch/: xrootd-selinux-5.6.9-2.el8.noarch.rpm
RPMS/el8/RPMS/x86_64/: python3-xrootd-5.6.9-2.el8.x86_64.rpm  python3-xrootd-debuginfo-5.6.9-2.el8.x86_64.rpm  xrdcl-http-5.6.9-2.el8.x86_64.rpm  xrdcl-http-debuginfo-5.6.9-2.el8.x86_64.rpm  xrootd-5.6.9-2.el8.x86_64.rpm  xrootd-client-5.6.9-2.el8.x86_64.rpm  xrootd-client-debuginfo-5.6.9-2.el8.x86_64.rpm  xrootd-client-devel-5.6.9-2.el8.x86_64.rpm  xrootd-client-libs-5.6.9-2.el8.x86_64.rpm  xrootd-debuginfo-5.6.9-2.el8.x86_64.rpm  xrootd-debugsource-5.6.9-2.el8.x86_64.rpm  xrootd-devel-5.6.9-2.el8.x86_64.rpm  xrootd-fuse-5.6.9-2.el8.x86_64.rpm  xrootd-fuse-debuginfo-5.6.9-2.el8.x86_64.rpm  xrootd-libs-5.6.9-2.el8.x86_64.rpm  xrootd-libs-debuginfo-5.6.9-2.el8.x86_64.rpm  (+9 more)
cmake/: XRootDFindLibs.cmake
debian/: clean
packaging/: makesrpm.sh  xrootd-5.5.4-7.el7.src.rpm
src/: XrdUtils.cmake
src/Xrd/: XrdConfig.cc  XrdMonRoll.hh  XrdMonitor.cc
src/XrdCeph/: CMakeLists.txt  XrdCephOss.cc  XrdCephOssBufferedFile.cc  XrdCephPosix.cc
src/XrdCks/: XrdCksManager.cc
src/XrdCl/: XrdClAsyncPageReader.hh
src/XrdCms/: XrdCmsCluster.cc
src/XrdHttp/: XrdHttpHeaderUtils.hh  XrdHttpProtocol.cc  XrdHttpProtocol.hh  XrdHttpReq.cc
src/XrdMacaroons/: CMakeLists.txt  XrdMacaroonsAuthz.cc
src/XrdNet/: XrdNetPMarkFF.cc
src/XrdOfs/: XrdOfs.cc
src/XrdSciTokens/: CMakeLists.txt  XrdSciTokensAccess.cc
src/XrdXrootd/: XrdXrootdConfig.cc  XrdXrootdProtocol.cc  XrdXrootdProtocol.hh  XrdXrootdXeq.cc  XrdXrootdXeqPgrw.cc
tests/XrdCeph/: CMakeLists.txt  XrdCephPosix_unittest.cc
utils/RAL/: xrdload.py  xrdload.sh
